# deep-think-mcp

./: .gitignore  .gitmodules  LICENSE  LICENSE-NOTICES  README.md  pyproject.toml
config/: default.toml
deploy/: deep-think-mcp.service
docs/: GUIDE.md  build-plan.md  evaluation.md  execution-plan.md  http-transport.md  necort_deps.md  repinning_necort.md  sequence-diagram.html  wiring.md
src/deep_think_mcp/: __init__.py  autopilot.py  config.py  index.py  lens_loader.py  lifecycle.py  manual_engine.py  meta.py  necort_adapter.py  prompts.py  serial_engine.py  server.py  session.py  stages.py  store.py  subagent_engine.py  tolerant.py
src/deep_think_mcp/lenses/: alternative_framing.md  first_principles.md  missing_perspective.md  overconfidence.md  scope_creep.md  steel_man.md  unstated_assumption.md  weak_evidence.md
tests/: test_autopilot.py  test_config.py  test_credential_containment.py  test_entrypoint.py  test_hardening.py  test_http_entry.py  test_index.py  test_lens_loader.py  test_lifecycle.py  test_manual_engine.py  test_manual_loop.py  test_meta.py  test_meta_tools.py  test_necort_adapter.py  test_necort_vendor.py  test_prompts_serial.py  test_serial_engine.py  test_serial_loop.py  test_server.py  test_session.py  test_stages.py  test_store.py  test_subagent_engine.py  test_subagent_loop.py  test_tolerant.py  test_tolerant_tools.py
