[project]
name = "deep-think-mcp"
version = "0.1.0"
description = "MCP server combining staged sequential reasoning with recursive self-critique, for local models."
authors = [
    { name = "Clint Moody", email = "100443920+ClintMoody@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28.1",
    "portalocker>=3.2.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
autopilot = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
